--- a/논문3.md
+++ b/논문3.md
@@ -1,2 +1,14 @@
 ## Trim Equations of Motion For Aircraft Design Steady State Straight
 ---------------------------------
+> 한글 번역 및 내용정리  
+
+**작성자: 이상호**
+>명명법
+>> $b$ = span  
+$C_{D}$ = drag Coefficient (aircraft)  
+$C_{D_{0}}$ = drag Coefficient (aircraft) for Zero AOA  
+$C_{l}$ = rolling moment coefficient (aircraft)  
+$C_{l_{0}}$ = rolling moment coefficient (aircraft) for Zero AOA  
+$C_{l_{\beta}}$ = variation of aircraft rolling moment coefficient with angle of sideslip  
+$C_{L}$ = lift coefficient (aircraft)  
+${C_{L_{0}}}$ = 
