--- a/논문3.md
+++ b/논문3.md
@@ -11,4 +11,17 @@ $C_{l}$ = rolling moment coefficient (aircraft)
 $C_{l_{0}}$ = rolling moment coefficient (aircraft) for Zero AOA  
 $C_{l_{\beta}}$ = variation of aircraft rolling moment coefficient with angle of sideslip  
 $C_{L}$ = lift coefficient (aircraft)  
-${C_{L_{0}}}$ = 
+${C_{L_{0}}}$ = lift coefficient (aircraft) for Zero AOA  
+${C_{L_{\alpha}}}$ = variation of aircraft lift coefficient with angle of sideslip  
+$C_{m}$ = pitching moment coefficient (aircraft)  
+${C_{m_{0}}}$ = pitching moment coefficient (aircraft) for Zero AOA  
+${C_{m_{\alpha}}}$ = variation of aircraft pitching moment coefficient with angle of sideslip  
+$C_{n}$ = yawing moment coefficient (aircraft)  
+${C_{n_{0}}}$ = yawing moment coefficient (aircraft) for Zero AOA  
+${C_{n_{\alpha}}}$ = variation of aircraft yawing moment coefficient with angle of sideslip  
+$C_{Y}$ = side force coefficient (aircraft)  
+${C_{Y_{0}}}$ = side force coefficient (aircraft) for Zero AOA  
+${C_{Y_{\alpha}}}$ = variation of aircraft side force coefficient with angle of sideslip  
+${F_{B}}$ = Body Axes ($c.g.$, $x,y,z$)  
+${F_{E}}$ = frame of reference (inertial system) attached to the Earth ($O_{E}, x_{E},y_{E},z_{E}$)  
+$F_{T_{x}}$,$F_{T_{y}}$,$F_{T_{z}}$ = scalar components of $\vec{T}$
