--- a/논문3.md
+++ b/논문3.md
@@ -24,4 +24,34 @@ ${C_{Y_{0}}}$ = side force coefficient (aircraft) for Zero AOA
 ${C_{Y_{\alpha}}}$ = variation of aircraft side force coefficient with angle of sideslip  
 ${F_{B}}$ = Body Axes ($c.g.$, $x,y,z$)  
 ${F_{E}}$ = frame of reference (inertial system) attached to the Earth ($O_{E}, x_{E},y_{E},z_{E}$)  
-$F_{T_{x}}$,$F_{T_{y}}$,$F_{T_{z}}$ = scalar components of $\vec{T}$
+$F_{T_{x}}$,$F_{T_{y}}$,$F_{T_{z}}$ = scalar components of $\vec{T}$  
+$g$ = acceleration due to gravity  
+$\vec{G}$ = external moment vector about the mass center  
+$\vec{h}'$ = angular momentum vector of spinning rotors with respect to rotor mass center  
+$h_{x}',h_{y}',h_{z}'$ = scalar components of $\vec{h}'$ in $F_{B}$  
+$i$ = aerodynamic control effector cariable incidence stabilizer angle (trimmable CE)  
+$I_{B}$ = inertia matrix  
+$I_{x},I_{y},I_{z}$ = moments of inertia  
+$I_{xy},I_{yz},I_{xz}$ = products of inertia  
+$L,M,N$ = scalar components of $\vec{G}$ in $F_{B}$, thrust moments  
+$m$ = mass  
+$p,q,r$ = scalar components of $\vec{\omega}$ in $F_{b}$  
+$\dot{p},\dot{q}, \dot{r}$ = scalar components of $\dot{\vec{\omega}}$ in $F_{b}$, rate of change of aircraft angular velocity  
+$\overline{q}$ = aircraft dynamic pressure  
+$S$ = area; wing reference area  
+$\vec{T}$ = thrust vector  
+$T_{x},T_{y},T_{z}$ = scalar components of $\vec{T}$  
+$u,v,w$ = scalar components of $\vec{V}$ in $F_{B}$, perturbed values of U,V, and W  
+$U,V,W$ = scalar velocity components of $\vec{V}$  
+$W$ = weight (aircraft)  
+$\vec{V}$ = aircraft velocity vector  
+$x_{E},y_{E},z_{E}$ = coordinates of aircrate mass center relative to fixed axes (inertial system of $F_{E}$)  
+$x_{T},y_{T},z_{T}$ = thrust line coordinates relative th the aircraft c.g.  
+$X,Y,Z$ = components of resultant force  
+$\alpha, \beta$ = AOA, AOS (Angle of sidesilp)  
+$\delta$ = control effector deflection angle  
+$\gamma$ = flight path angle  
+$\Delta$ = increment of a parameter; non-zero reference value  
+$\tau_{X},\tau_{M},\tau_{N}$ = correctuibs for propulsive installation  
+$\phi, \theta, \psi$ = Euler angles  
+$\vec{\omega}$ = angular velocity vector
