--- a/논문3.md
+++ b/논문3.md
@@ -55,3 +55,121 @@ $\Delta$ = increment of a parameter; non-zero reference value
 $\tau_{X},\tau_{M},\tau_{N}$ = correctuibs for propulsive installation  
 $\phi, \theta, \psi$ = Euler angles  
 $\vec{\omega}$ = angular velocity vector
+
+* Introduction  
+ **Context**   
+ AeroMech은 일반적으로 고정익 비행기의 제어 효과기 크기를 일관되게 조절하기 위한 안정성 및 제어(S&C) 방법론을 개발하기 위한 4년 동안의 연구를 바탕으로 한다.  
+ 총적으로, 이 연구의 실제 복잡성은 일반적인 (기체 구성과 무관한) 방법론 개념 및 알고리즘을 개발하는 목표에 감춰져 있다. 비대칭 비행 조건 및 대칭 비행기 유형 외에도 비대칭 비행 조건 및 비대칭 비행기 구성 요소의 포함은 전반적인 기술적 복잡성과 추상화 수준에 크게 기여했다. 또한 control effectors (CE)는 크루즈 설계 지점을 위해 설계되지 않는다. 대신 비선형 공력이 우세한 비행 환경의 'gery-area'에서 크기가 결정되며 초기 개념 설계 단계에서 구체적인 정보를 요구합니다. 전반적으로 개발 목표는 "가능한 간단하게, 그러나 더 단순하게는 안 된다"는 의도로 개념적 설계 응용을 위한 방법론 개념을 개발하는 것이었습니다.  
+
+  **안정성 및 제어를 위한 설계**.  
+  AeroMech에서는 모든 설계 의사 결정이 6자유도(6-DOF)에서 트리밍된 비행기의 평가를 기반으로 한다. 예외는 이륙 회전 조작이며, 트림 (정상 상태) 방정식은 정의된 임계 비행 조건(DCFC) 범위에 대한 제어 가능/필요한 파워를 결정하기 위해 사용된다. 동적 (작은 교란) 방정식은 안정화와 감쇄를 복원하기 위해 필요한 이득 상수를 추정하기 위해 사용된다. 동적 안정성 특성은 동적 방정식에서 생성된 결과를 사용하여 분석된다. 오프라인 분석 순서는 감소된 차수 모델을 사용하여 차량의 동적 안정성 특성을 평가한다. 이 추세 정보를 통해 설계자는 모드 드라이버에 대한 물리적 통찰력을 얻을 수 있다. 출력 파일은 최종적으로 제어 파워와 정적, 기동 및 동적 안정성 간의 균형을 보장하는 설계 관련 정보를 포함한다. 제어 가능/필요한 파워는 
+  * (a) 부피 계수 (기하학) 
+  * (b) 안정성 미분 계수 (공력학) 
+  * (c) 필요한 CE 편각 (운영)  
+  
+  으로 정의된다.
+
+  **벤치마크 기체**  
+  용어 'generic'은 비대칭 비행기 유형이 가장 일반적인 항공기 배치로 간주되며 대칭 유형은 특정 단순화 가정이 유효한 '간단한' 또는 특수한 경우를 나타낸다는 것을 의미한다. 비대칭 비행기에 대한 방법론 개념의 기능성은 대칭 비행기 범위에 대한 기능성을 보증한다. 이 접근법의 중요한 부산물은 대칭 및 비대칭 비행기 구성의 비대칭 비행 조건을 다룰 수 있는 능력이고, 이는 개념적 설계 방법에 대한 비전형적인 능력이다. 기술적으로 비대칭 비행기 구성은 가장 요구되는 항공기 유형을 닮았는데, 그럼에도 무시할 수 없는 성능 잠재력을 제공할 수 있다. 특히 OFWC(Oblong Flying Wing Configuration)와 같은 비대칭 비행기 유형은 양날 및 인가유도 드래그 최소화를 위한 최적 선택이다. 또한 OFWC의 구조적 효율성은 스팬 로더 개념 및 체적 효율성으로 인해 우수하다. 그러나 본질적인 안정성 및 제어 특성이 복잡성을 증가시킨다. 대칭 비행기 유형과 달리 비대칭 비행기는 관성 결합 및 공력 결합 효과로 인해 고도로 결합된 시스템을 나타낸다. 
+
+  **모델링 어프로치**  
+  두 가지 일반 비행 조건에 대한 EOM의 해석이 가장 큰 관심에 있다. 정상 상태 운동 방정식(EOM)은 기체의 조종 가능성 문제(제어 파워)를 연구하는 기초를 형성하며, 교란된 상태의 EOM은 비행기의 동적 안정성 및 응답 문제 및 자동 비행 제어 이론 및 응용을 연구하는 기초를 형성한다. 현재 문맥에서는 조종 가능성 측면을 연구하는 데만 관심이 있다고 본다.  
+  
+  3가지의 비대칭 비행기 유형을 해석적으로 모델링하는 주요 접근 방법은:
+  * (a) 종방향 및 측방운동을 분리하고 상호결합 용어를 무시하여 최종적으로 고전적인 3자유도(3-DOF) 접근.
+
+  * (b) 종방향 및 측방운동을 분리하는 동시에 상호결합을 무시하지 않는 분석
+
+  * (c) 완전히 결합된 6-자유도 운동 방정식(EOM)의 공식화
+
+  이다.
+
+* Steady State Equations of motion  
+  **GEE(General Euler EOM)**  
+  Steady State flight 에서, 
+  <center>
+
+  $\vec{\dot{V}} = 0$  
+  $\vec{\dot{\omega}} = 0$
+
+  </center>
+
+  다음과 같은 5가지 케이스가 비대칭 항공기 타입으로 모델링 될 수 있다:
+  <center>
+
+  ![case](/SS.jpeg)
+
+  </center>
+  이 중 Quasi-Steady take-off rotation 케이스는 Steady state flight에서는 X 
+
+  이 논문은 Steady-State Stragiht-Line Flight 에 대해 다룸. 
+  <center>
+
+  ![EQ](/Eq.jpeg)
+
+  </center>
+
+  General Euler EOM with Spinning Rotors
+
+  위 방정식은 다음과 같은 assuptions를 따른다. 
+    * 1.지구는 관성 공간에서 평평하고 정지한 것으로 취급되므로 회전 속도는 무시한다.
+    * 2.이 방정식들은 비행체의 중심에 고정된 어떤 직교 축 시스템 (몸체 축)에 대해 유효하다.
+    * 3.비행체는 강체이고, 그 위에 여러 강체인 회전 로터가 부착되어 있다.
+    * 4.회전하는 로터는 몸체 축에 대해 일정한 각 속도를 가지고 있다. 어떤 회전하는 로터의 축도 몸체 축에 대해 고정된 방향을 가지고 있다.
+    * 5.바람 속도는 zero이다.
+
+  위 맥락에서의 언급은   
+  (i) 대칭 평면의 존재,   
+  (ii) 공기 역학적 교차 결합의 무시,   
+  (iii) 로터 자이로스코픽 효과의 부재  
+   같은 일반적인 가정이 받아들여지지 않았다.
+
+   **THRUST FORCES AND MOMENTS**
+   <center>
+
+   ![](/TF.jpeg)
+
+   </center>
+
+   위 이미지에서, 우리는 다음과 같은 식을 얻는다. 
+
+   <center>
+
+   ![](/e1.jpeg)  
+
+   ![](/e2.jpeg)
+
+   </center>
+
+   각 $\phi_{T_{i}}$ 는 negative다
+
+   **STEADY STATE STRAIGHT LINE FLIGHT**  
+   정상상태의 직선 비행 특성을 고려하면, 6-DOF Trim EOM은 다음과 같이 표시된다. 
+
+   <center>
+
+   ![](/eq3.jpeg)
+
+   </center>
+
+   또한, Force와 Momentum은,
+   <center>
+
+   ![](/eq4.jpeg)  
+   ![](/eq5.jpeg)
+
+   </center>
+
+   의 형태를 지닌다.
+
+   항공기의 Steady-State Straght Line filght에서, CE 사이징 시나리오는 다음과 같이 나타난다.
+
+   <center>
+
+   ![](/sizing.jpeg)
+
+   </center>
+
+* Conclusion  
+
+  제시된 안정 상태 직선 비행에 대한 공식은 항공기 디자이너가 개념적 설계 수준에서 최소한의 입력 데이터로 여러 비행 및 인증 중요 비행 조건을 평가할 수 있게 해준다. 이 완전히 개발된 6자유도 운동 방정식 공식은 디자이너가 대칭 및 비대칭 비행 조건에서 전통적이고 비전통적인 고정익 비행기를 일관되게 평가할 수 있도록 한다. 비행기에 대한 간단하면서 일반적인 공식에 도달하는 디자인 목표는 달성되었다고 할 수 있다.
